--- a/bucalemu-cordova-match-images/package.json
+++ b/bucalemu-cordova-match-images/package.json
@@ -7,5 +7,8 @@
   },
   "scripts": {
     "build": "browserify src/index.js > www/js/index.js"
+  },
+  "dependencies": {
+    "jquery": "^3.2.1"
   }
 }
